# erpnext_arabic_layout

./: README.md  pyproject.toml  setup.py
